removing unnecessary optionals and appends